# ax12_manipulator_gazebo

angle_ax12_model_pkg/: CMakeLists.txt  package.xml
angle_ax12_model_pkg/config/: arm_control.yaml  gripper_control.yaml
angle_ax12_model_pkg/launch/: angle_arm_ax12_load.launch  angle_robot_ax12.launch  angle_robot_ax12_model.launch  angle_robot_nodes.launch
angle_ax12_model_pkg/meshes/: link_g1.dae  link_g2.dae
angle_ax12_model_pkg/nodes/: RoboticArmClass.py  gripper_control.py  joint_space_controller.py  pub.py  to_point_node.py
angle_ax12_model_pkg/src/: gripper_control.py
angle_ax12_model_pkg/urdf/: angle_robot_ax12.gazebo  angle_robot_ax12.urdf.xacro
palletizer_ax12_model_pkg/: CMakeLists.txt  package.xml  setup.py
palletizer_ax12_model_pkg/config/: arm_control.yaml
palletizer_ax12_model_pkg/launch/: palletizer_robot_ax12_load.launch  palletizer_robot_ax12_model.launch
palletizer_ax12_model_pkg/meshes/: link2.dae  link3.dae  link5.dae  link6.dae  link7.dae  link8.dae  link9.dae
palletizer_ax12_model_pkg/urdf/: palletizer_robot_ax12.gazebo  palletizer_robot_ax12.urdf.xacro
palletizer_ax12_model_pkg/world/: world.world
